--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,8 @@
             "name": "gcc - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            // "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "program": "${workspaceFolder}/build/LAB2C",
-            // "program": "${workspaceFolder}/src/LAB2C",
+            // "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+            "program": "${workspaceFolder}/build/${fileBasenameNoExtension}.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -28,9 +27,14 @@
                     "text": "-gdb-set disassembly-flavor intel",
                     "ignoreFailures": true
                 }
+                // {
+                //     "description": "Additional libs for gdb",
+                //     "text": "set solib-search-path sharedLibraryPath/lib"
+                // }
             ],
-            // "preLaunchTask": "C/C++: gcc build active file",
+            "preLaunchTask": "C/C++: gcc build active file",
             "miDebuggerPath": "/usr/bin/gdb"
         }
+        
     ]
 }
