gnu17 changed to gnu11

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
                 //     "text": "set solib-search-path sharedLibraryPath/lib"
                 // }
             ],
-            "preLaunchTask": "C/C++: gcc build active file",
+            // "preLaunchTask": "C/C++: gcc build active file",
             "miDebuggerPath": "/usr/bin/gdb"
         }
         
