--- a/.github/workflows/makefile-build.yaml
+++ b/.github/workflows/makefile-build.yaml
@@ -28,5 +28,5 @@ jobs:
     - name: checkout repo
       uses: actions/checkout@v2
     
-    - name: build application
+    - name: check makefile build
       run: make
