--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,32 @@
             "name": "gcc - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "C/C++: gcc build active file",
+            "miDebuggerPath": "/usr/bin/gdb"
+        }, 
+        {
+            "name": "makefile debug",
+            "type": "cppdbg",
+            "request": "launch",
             // "program": "${workspaceFolder}/${fileBasenameNoExtension}",
             "program": "${workspaceFolder}/build/${fileBasenameNoExtension}.exe",
             "args": [],
@@ -27,14 +53,9 @@
                     "text": "-gdb-set disassembly-flavor intel",
                     "ignoreFailures": true
                 }
-                // {
-                //     "description": "Additional libs for gdb",
-                //     "text": "set solib-search-path sharedLibraryPath/lib"
-                // }
             ],
             // "preLaunchTask": "C/C++: gcc build active file",
             "miDebuggerPath": "/usr/bin/gdb"
         }
-        
     ]
 }
